<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/editTextName"
            android:padding="12dp" />

        <RadioGroup
            android:id="@+id/radioGroupColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/radioRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioRed"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/radioWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioWhite"
                android:gravity="center" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroupPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/radioCheap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioCheap"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/radioExpensive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioExpensive"
                android:gravity="center" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonOrder"
            android:layout_gravity="center" />
    </LinearLayout>

</FrameLayout>